--- a/src/components/navigation/HamburgerMenu.module.scss
+++ b/src/components/navigation/HamburgerMenu.module.scss
@@ -1,44 +1,6 @@
 @import "../../styles/base";
 
 .hamburger-container {
-  .hamburger-icon {
-    right: map_get($gutters, 'm');
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 30px;
-    z-index: 12;
-    background-color: transparent;
-    transform: translateX(5px);
-
-    &:focus {
-      outline: none;
-    }
-
-    div {
-      width: 2em;
-      height: 2px;
-      background: map_get($colours, 'light-green');
-      transition: all 0.3s ease-in-out;
-      position: relative;
-      transform-origin: 2px;
-
-      &:first-child {
-        transform: rotate(45deg);
-      }
-
-      &:nth-child(2) {
-        opacity: 0;
-        transform: translateX(20px);
-      }
-
-      &:nth-child(3) {
-        transform: rotate(-45deg);
-      }
-    }
-  }
-
   .hamburger-menu {
     position: fixed;
     top: $nav-height;
@@ -53,8 +15,7 @@
 
     .nav-links {
       margin-top: map_get($gutters, 'l');
-      li {
-        cursor: pointer;
+      .nav-link {
         margin-bottom: map_get($gutters, 'xl');
         &:last-child {
           margin-bottom: 0;
@@ -65,31 +26,8 @@
 }
 
 .hide {
-  & .hamburger-icon {
-    div {
-      &:first-child {
-        transform: rotate(0);
-      }
-
-      &:nth-child(2) {
-        opacity: 1;
-        transform: translateX(0);
-      }
-
-      &:nth-child(3) {
-        transform: rotate(0);
-      }
-    }
-  }
-
   & .hamburger-menu {
     transition: transform 0.4s ease-in-out;
     transform: translateY(100vh);
-  }
-}
-
-@include for-tablet-landscape-up() {
-  .hamburger-container {
-    display: none;
   }
 }
