--- a/src/components/PrimaryButton.module.scss
+++ b/src/components/PrimaryButton.module.scss
@@ -6,12 +6,12 @@
   color: map_get($colours, 'black');
   background-color: map_get($colours, 'light-green');
   border: 1px solid map_get($colours, 'light-green');
-  padding: map_get($gutters, 'm');
-  min-height: 40px;
-  min-width: 100px;
+  border-radius: 100px;
+  padding: map_get($gutters, 'm') map_get($gutters, 'l');
   transition: all 0.4s ease 0s;
 
   &:hover {
+    transform: scale(1.1);
     color: map_get($colours, 'light-green');
     background-color: transparent;
     transition: all 0.2s ease 0s;
