--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -1,59 +1,62 @@
 @import "../styles/base";
 
-.hero-container {
-  position: relative;
+.intro {
+  color: map_get($colours, 'white');
+  letter-spacing: 1px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  clip-path: polygon(50% 100%, 100% 90%, 100% 0, 0 0, 0 90%);
 
-  .hero {
-    position: absolute;
+  .hello {
+    @include font-size-medium();
+    font-weight: map_get($font-weights, 'regular');
+  }
+
+  .name {
+    text-transform: uppercase;
+    @include font-size-header();
+    font-size: 40px;
+    margin-bottom: map_get($gutters, 'xl');
+  }
+
+  .description {
+    max-width: 700px;
+    font-weight: map_get($font-weights, 'regular');
+    @include font-size-medium();
+    padding: 0 map_get($gutters, 'l');
+  }
+
+  .btn-group {
+    margin-top: map_get($gutters, 'xl');
+    .read-more {
+      margin-right: map_get($gutters, 'xl');
+    }
+  }
+
+  .hero-img-container {
+    z-index: -1;
+    position: fixed;
     top: 0;
+    left: 0;
     right: 0;
     bottom: 0;
-    left: 0;
-    height: 100%;
     width: 100%;
-    .banner-container {
-      z-index: -1;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+    height: 100%;
+    filter: brightness(50%);
+    .hero-img {
       width: 100%;
       height: 100%;
-      filter: brightness(50%);
-      .banner {
-        width: 100%;
-        height: 100%;
-      }
     }
-    .hero-text {
-      flex-direction: column;
-      flex-wrap: nowrap;
-      line-height: 1.5;
-      margin: 10rem auto 5rem;
-      color: map_get($colours, 'white');
-      //display: flex;
-      //flex-direction: column;
-      //justify-content: center;
-      //align-items: center;
-      text-align: center;
-      .name {
-        margin-bottom: map_get($gutters, 'm');
-        text-transform: uppercase;
-        font-size: 3rem;
-      }
-      .description {
-        max-width: 700px;
-        margin: 0 auto;
-        font-size: map_get($font-sizes, 'xl');
-      }
-    }
-    .btn-container {
-      .read-more {
-        margin-right: map_get($gutters, 'xl');
-      }
-      //text-align: center;
-    }
+  }
+
+  .container {
+    text-align: center;
+    margin-bottom: 5em; // this stops the clip-path clipping the shit out of the bottom part of the hero text
+    margin-top: $nav-height; // this stops the navigation overlapping with the hero text
+    position: relative;
   }
 }
