--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,3 +1,5 @@
+@import "../styles/base";
+
 * {
   padding: 0;
   margin: 0;
@@ -6,4 +8,9 @@
 
 ul {
   list-style: none;
+}
+
+body {
+  background-color: map_get($colours, 'dark-blue');
+  color: map_get($colours, 'white');
 }
